--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
+google-services.json
 .utmp/
 /[Ll]ibrary/
 /[Tt]emp/
